--- a/EnigmaMachine.Tests/EnigmaMachine.Tests.csproj
+++ b/EnigmaMachine.Tests/EnigmaMachine.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Stephane\RotorTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
