--- a/EnigmaMachine.Tests/EnigmaMachine.Tests.csproj
+++ b/EnigmaMachine.Tests/EnigmaMachine.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Stephane\RotorTests.cs" />
+    <Compile Include="Stephane\PlugboardTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
