--- a/EnigmaMachine/EnigmaMachine.csproj
+++ b/EnigmaMachine/EnigmaMachine.csproj
@@ -40,9 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stephane\EnigmaMachine.cs" />
+    <Compile Include="Stephane\EnigmaMachineExtensions.cs" />
+    <Compile Include="Stephane\LetterExtensions.cs" />
     <Compile Include="Stephane\LetterMapper.cs" />
     <Compile Include="Stephane\Plugboard.cs" />
+    <Compile Include="Stephane\Reflector.cs" />
     <Compile Include="Stephane\Rotor.cs" />
+    <Compile Include="Stephane\RotorSocket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
