--- a/EnigmaMachine/EnigmaMachine.csproj
+++ b/EnigmaMachine/EnigmaMachine.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RotorInfo.cs" />
     <Compile Include="Stephane\EnigmaMachine.cs" />
-    <Compile Include="Stephane\EnigmaMachineExtensions.cs" />
+    <Compile Include="EnigmaMachineExtensions.cs" />
     <Compile Include="Stephane\LetterExtensions.cs" />
     <Compile Include="Stephane\LetterMapper.cs" />
     <Compile Include="Stephane\Plugboard.cs" />
